--- a/index.html
+++ b/index.html
@@ -924,26 +924,27 @@ despejar la mente sin rutinas extremas.
 
       <div class="cards-grid">
         <!-- Nota 1 -->
-        <article class="card-simple">
-          <h3>¿Cuántas calorías se queman al caminar?</h3>
-          <p>
-            Explicación clara de cómo influyen el peso corporal, el tiempo, la velocidad
-            y la carga adicional en el gasto calórico de la caminata.
-          </p>
-          <p>
-            <a href="#calorias-caminando">Leer guía completa →</a>
-          </p>
-        </article>
-       <article class="card-simple">
-        <h3>Caminar para despejar la mente</h3>
-         <p>
-          Cómo usar la caminata como una pausa consciente para reducir el estrés, ordenar
-          ideas y recuperar claridad sin necesidad de técnicas complicadas.
-          </p>
-         <p>
-        <a href="#caminar-para-despejar-la-mente">Leer guía completa →</a>
-      </p>
-    </article>
+      <article class="card-simple">
+  <h3>¿Cuántas calorías se queman al caminar?</h3>
+
+  <p>
+    Explicación clara de cómo influyen el peso corporal, el tiempo, la velocidad
+    y la carga adicional en el gasto calórico de la caminata.
+  </p>
+
+  <p>
+    <a href="calorias-quemadas-caminando.html">
+      Leer guía completa →
+    </a>
+  </p>
+
+  <p style="margin-top:6px; font-size:0.85rem; opacity:0.75;">
+    <a href="#calorias-caminando">
+      Ver resumen en esta página
+    </a>
+  </p>
+</article>
+
      <article class="card-simple">
   <h3>Déficit calórico: la guía simple y definitiva</h3>
   <p>
