--- a/index.html
+++ b/index.html
@@ -914,410 +914,24 @@ despejar la mente sin rutinas extremas.
     </section>
 
     <!-- NOTAS Y GUÍAS -->
-    <section id="notas" class="section">
-      <h2 class="section-title">Notas y guías</h2>
-      <p class="section-sub">
-        Aquí se agrupan artículos con explicaciones sencillas sobre caminata, gasto calórico
-        y movimiento diario. Cada guía se conecta con las herramientas de ViveActivo para
-        que sea más fácil pasar de la teoría a la acción.
-      </p>
+    <section id="notas">
+  <h2>Guías prácticas</h2>
 
-      <div class="cards-grid">
-        <!-- Nota 1 -->
-      <article class="card-simple">
-  <h3>¿Cuántas calorías se queman al caminar?</h3>
+  <article class="card-simple">
+    <h3>¿Cuántas calorías se queman al caminar?</h3>
 
-  <p>
-    Explicación clara de cómo influyen el peso corporal, el tiempo, la velocidad
-    y la carga adicional en el gasto calórico de la caminata.
-  </p>
+    <p>
+      Una guía clara para entender cómo influyen el peso, el tiempo y el ritmo
+      en el gasto calórico de una caminata, y cómo usarlo para bajar de peso
+      sin entrenamientos extremos.
+    </p>
 
-  <p>
     <a href="calorias-quemadas-caminando.html">
       Leer guía completa →
     </a>
-  </p>
-
-  <p style="margin-top:6px; font-size:0.85rem; opacity:0.75;">
-    <a href="#calorias-caminando">
-      Ver resumen en esta página
-    </a>
-  </p>
-</article>
-
-     <article class="card-simple">
-  <h3>Déficit calórico: la guía simple y definitiva</h3>
-  <p>
-    Qué es realmente el déficit calórico, cómo se crea sin dietas extremas y cómo mantenerlo sin pasar hambre.
-  </p>
-  <p>
-    <a href="#deficit-calorico">Leer guía completa →</a>
-  </p>
-</article>
-
-
-        <!-- Cuando haya nuevas notas, se agregan más artículos aquí -->
-        <!--
-        <article class="card-simple">
-          <h3>Título de la siguiente nota</h3>
-          <p>Resumen breve de lo que explica la guía.</p>
-          <p><a href="#id-de-la-nota">Leer guía completa →</a></p>
-        </article>
-        -->
-      </div>
-    </section>
-      <article class="card-simple">
-  <h3>Rucking: caminar con peso para quemar más energía</h3>
-  <p>
-    En qué consiste el rucking, cómo empezar de forma segura y cómo usarlo como
-    herramienta extra para aumentar el gasto calórico sin necesidad de correr.
-  </p>
-  <p>
-    <a href="#rucking">Leer guía completa →</a>
-  </p>
-</article>
-
-     <!-- POR QUÉ EXISTE -->
-    <!-- ARTÍCULO: ¿Cuántas calorías se queman al caminar? -->
-    <section id="calorias-caminando" class="section">
-      <h2 class="section-title">¿Cuántas calorías se queman al caminar?</h2>
-      <p class="section-sub">
-        La cantidad de calorías que se queman caminando depende principalmente del peso corporal,
-        la duración de la caminata y la intensidad o velocidad. En promedio, una persona puede
-        quemar entre 180 y 280 calorías por hora de caminata moderada, pero lo ideal es calcularlo
-        de forma más precisa según cada caso.
-      </p>
-
-      <div class="cards-grid">
-        <article class="card-simple">
-          <h3>Valores de referencia generales</h3>
-          <p>
-            De forma aproximada, una caminata moderada puede generar el siguiente gasto calórico
-            en una hora:
-          </p>
-          <ul class="list">
-            <li>50 kg: 160 a 190 kcal por hora.</li>
-            <li>60 kg: 180 a 220 kcal por hora.</li>
-            <li>70 kg: 220 a 260 kcal por hora.</li>
-            <li>80 kg: 260 a 300 kcal por hora.</li>
-            <li>90 kg: 300 a 340 kcal por hora.</li>
-          </ul>
-          <p>
-            Estos valores son orientativos. Factores como la edad, el terreno, la condición
-            física y la postura pueden modificar el resultado real.
-          </p>
-        </article>
-
-        <article class="card-simple">
-          <h3>Influencias principales en el gasto calórico</h3>
-          <p>
-            El gasto energético al caminar aumenta o disminuye en función de varios elementos:
-          </p>
-          <ul class="list">
-            <li><strong>Peso corporal:</strong> a mayor peso, mayor gasto calórico.</li>
-            <li><strong>Velocidad:</strong> caminar rápido incrementa de forma notable el consumo de energía.</li>
-            <li><strong>Terreno:</strong> subidas, pendientes o superficies irregulares exigen más esfuerzo.</li>
-            <li><strong>Duración:</strong> a más minutos de caminata, mayor suma total de calorías.</li>
-            <li><strong>Carga adicional:</strong> caminar con mochila o peso extra (rucking) puede aumentar el gasto entre un 20% y un 50%.</li>
-          </ul>
-        </article>
-
-        <article class="card-simple">
-          <h3>Usar la calculadora para un dato más preciso</h3>
-          <p>
-            Las tablas y valores generales son útiles para tener una idea rápida, pero si se busca
-            una estimación más ajustada a la realidad, es recomendable utilizar una herramienta
-            específica.
-          </p>
-          <p>
-            En ViveActivo se puede calcular el gasto calórico estimado a partir de:
-          </p>
-          <ul class="list">
-            <li>Peso corporal.</li>
-            <li>Tiempo de caminata.</li>
-            <li>Intensidad o percepción de esfuerzo.</li>
-            <li>Opcional: peso adicional y distancia aproximada.</li>
-          </ul>
-          <p>
-            <a href="#calculadoras">Ir a las calculadoras de caminata</a>
-          </p>
-        </article>
-      </div>
-
-      <p class="section-sub" style="margin-top: 1rem;">
-        La caminata es una forma sencilla y accesible de aumentar el gasto calórico diario. No requiere
-        equipamiento especial, es de bajo impacto y se adapta a distintos niveles de condición física.
-        La clave está en la constancia y en entender qué aporta cada sesión dentro del objetivo general.
-      </p>
-    </section>
-<!-- ARTÍCULO: Caminar para despejar la mente -->
-<section id="caminar-para-despejar-la-mente" class="section">
-  <h2 class="section-title">Caminar para despejar la mente</h2>
-  <p class="section-sub">
-    Además de ayudar con el gasto calórico, la caminata puede funcionar como una
-    herramienta sencilla para reducir el estrés, ordenar pensamientos y recuperar
-    una sensación de calma. No requiere técnica avanzada ni preparación especial:
-    se trata de caminar con un poco más de intención.
-  </p>
-
-  <div class="cards-grid">
-    <article class="card-simple">
-      <h3>Beneficios mentales de la caminata</h3>
-      <p>
-        Caminar de forma regular puede aportar varios efectos positivos a nivel mental:
-      </p>
-      <ul class="list">
-        <li>Disminución de la tensión acumulada durante el día.</li>
-        <li>Mejora del estado de ánimo gracias al movimiento y al entorno.</li>
-        <li>Espacio para pensar sin interrupciones constantes.</li>
-        <li>Sensación de logro simple: salir, caminar y volver.</li>
-      </ul>
-      <p>
-        No reemplaza un tratamiento profesional cuando es necesario, pero sí puede
-        ser un apoyo concreto en la vida diaria.
-      </p>
-    </article>
-
-    <article class="card-simple">
-      <h3>Cómo usar la caminata como pausa mental</h3>
-      <p>
-        No es indispensable contar pasos ni tiempos exactos para que la caminata
-        ayude a despejar la mente. Algunas ideas prácticas:
-      </p>
-      <ul class="list">
-        <li>Elegir un recorrido sencillo y seguro que se conozca de memoria.</li>
-        <li>Dejar el teléfono en silencio o en modo avión durante unos minutos.</li>
-        <li>Prestar atención al ritmo de los pasos y a la respiración.</li>
-        <li>Permitir que las ideas aparezcan sin necesidad de resolver todo al instante.</li>
-      </ul>
-      <p>
-        Estas caminatas pueden durar 10, 20 o 30 minutos. Lo importante es que
-        se conviertan en un espacio fijo en la rutina.
-      </p>
-    </article>
-
-    <article class="card-simple">
-      <h3>Combinar mente y cuerpo en ViveActivo</h3>
-      <p>
-        En ViveActivo, la caminata se integra con otras piezas del bienestar:
-        algo de fuerza, descanso adecuado y claridad en la alimentación.
-      </p>
-      <p>
-        Utilizar la caminata como momento para despejar la mente puede hacer que
-        sea más sencillo sostener otros cambios, como organizar mejor las comidas
-        o respetar horarios de sueño.
-      </p>
-      <p>
-        <a href="#calculadoras">Usar las calculadoras de caminata</a> para
-        tener una referencia del gasto calórico, y al mismo tiempo mantener
-        el enfoque en cómo se siente cada salida, no solo en los números.
-      </p>
-    </article>
-  </div>
-
-  <p class="section-sub" style="margin-top: 1rem;">
-    Convertir la caminata en una pausa para la mente no requiere rituales
-    complejos. Basta con reservar un tramo del día para salir, moverse y
-    crear un pequeño espacio propio. A partir de allí, se vuelve más fácil
-    tomar mejores decisiones para el cuerpo y para la vida diaria.
-  </p>
-</section>
-<!-- ARTÍCULO: Déficit calórico -->
-<section id="deficit-calorico" class="section">
-  <h2 class="section-title">Déficit calórico: la guía simple y definitiva</h2>
-
-  <p class="section-sub">
-    El déficit calórico es el pilar más importante para bajar de peso. No importa el plan, la dieta o el ejercicio: si no existe déficit, no hay pérdida de grasa. Y lo mejor es que se puede lograr de manera simple, sin dietas estrictas ni entrenamientos agotadores.
-
-Para profundizar, podés leer la 
-  <a href="deficit-calorico.html">guía completa de déficit calórico</a>, hecha para personas reales.
-  </p>
-
-  <div class="cards-grid">
-
-    <article class="card-simple">
-      <h3>¿Qué es el déficit calórico?</h3>
-      <p>
-        Es la diferencia entre lo que tu cuerpo gasta y lo que consumís. Si gastás más energía de la que ingresás, usás tus reservas (grasa) para compensar.
-      </p>
-
-      <ul class="list">
-        <li><strong>Gasto energético:</strong> pasos, caminata, fuerza, digestión, metabolismo basal.</li>
-        <li><strong>Ingesta energética:</strong> todo lo que comés y bebés.</li>
-      </ul>
-
-      <p>
-        No es magia. Es fisiología. Pero el truco está en hacerlo sostenible.
-      </p>
-    </article>
-
-    <article class="card-simple">
-      <h3>Cómo crear un déficit sin pasar hambre</h3>
-      <p>Los métodos extremos fallan porque no son sostenibles. En ViveActivo priorizamos lo contrario: que puedas sostenerlo sin sufrir.</p>
-
-      <ul class="list">
-        <li><strong>Elegir alimentos de alta saciedad:</strong> carnes magras, huevos, frutas, verduras, legumbres.</li>
-        <li><strong>Aumentar el movimiento diario:</strong> pasos, pequeñas caminatas, rucking suave.</li>
-        <li><strong>Entrenamiento de fuerza:</strong> poco volumen, pero constante.</li>
-        <li><strong>Descanso adecuado:</strong> dormir 7–8 horas mejora el control del apetito.</li>
-      </ul>
-
-      <p>
-        La clave: <strong>sentir menos hambre</strong>, no “tener más fuerza de voluntad”.
-      </p>
-    </article>
-
-    <article class="card-simple">
-      <h3>Cómo saber tu déficit real</h3>
-      <p>La forma más precisa es observar tendencias, no números exactos.</p>
-      <ul class="list">
-        <li><strong>Si el peso baja en 2 a 3 semanas:</strong> estás en déficit.</li>
-        <li><strong>Si se estanca:</strong> estás en mantenimiento (que no es malo).</li>
-        <li><strong>Si sube:</strong> estás en superávit.</li>
-      </ul>
-
-      <p>
-        Nuestra herramienta de cálculo (próximamente) te dará una estimación personalizada basada en tus datos reales.
-      </p>
-
-      <p>
-        Para acelerar el déficit sin sufrir, probá sumar <a href="#rucking">rucking suave</a> o la caminata sostenida diaria.
-
-      </p>
-    </article>
-
-  </div>
-
-  <p class="section-sub" style="margin-top: 1rem;">
-    El déficit calórico no tiene por qué sentirse como una lucha. Cuando combinás movimiento sostenible, fuerza simple y alimentación de saciedad, el proceso se vuelve natural y predecible. Y eso es lo que buscamos en ViveActivo: un método que puedas mantener años, no semanas.
-  </p>
-</section>
-<!-- ARTÍCULO: Rucking -->
-<section id="rucking" class="section">
-  <h2 class="section-title">Rucking: caminar con peso para quemar más energía</h2>
-
-  <p class="section-sub">
-    El rucking es una forma simple de aumentar el gasto calórico: se trata de caminar
-    llevando peso adicional, normalmente en una mochila. No es correr, no es una
-    marcha militar obligatoria; es una herramienta que puede adaptarse a casi cualquier
-    nivel si se usa con criterio.
-  </p>
-
-  <div class="cards-grid">
-
-    <article class="card-simple">
-      <h3>¿Qué es exactamente el rucking?</h3>
-      <p>
-        En términos simples, es caminar con una mochila con peso. Ese peso extra hace
-        que el cuerpo gaste más energía para realizar el mismo movimiento.
-      </p>
-      <ul class="list">
-        <li><strong>No requiere equipamiento especial:</strong> una mochila resistente y peso estable.</li>
-        <li><strong>No exige correr:</strong> el ritmo suele ser el de una caminata rápida.</li>
-        <li><strong>Es progresivo:</strong> se puede empezar con poco peso e ir subiendo con el tiempo.</li>
-      </ul>
-      <p>
-        Es una forma accesible de sumar “intensidad inteligente” a la caminata sin
-        entrar en entrenamientos extremos.
-      </p>
-    </article>
-
-    <article class="card-simple">
-      <h3>Cómo empezar con rucking de forma segura</h3>
-      <p>
-        No hace falta cargar mucho peso desde el primer día. De hecho, es mejor
-        arrancar liviano y escuchar al cuerpo.
-      </p>
-      <ul class="list">
-        <li><strong>Peso inicial sugerido:</strong> entre el 5% y el 10% del peso corporal.</li>
-        <li><strong>Superficie:</strong> terreno plano y conocido, como veredas o parques.</li>
-        <li><strong>Postura:</strong> ajustar bien las correas de la mochila para que el peso quede cerca del cuerpo.</li>
-        <li><strong>Duración:</strong> 15–20 minutos al principio, 1 a 3 veces por semana.</li>
-      </ul>
-      <p>
-        Si aparecen molestias en rodillas, espalda o tobillos, conviene reducir peso,
-        tiempo o ambas cosas.
-      </p>
-    </article>
-
-    <article class="card-simple">
-      <h3>Cómo encaja el rucking en ViveActivo</h3>
-      <p>
-        En ViveActivo, el rucking es una herramienta opcional para quienes ya se sienten
-        cómodos con la caminata y quieren un poco más de intensidad sin correr.
-      </p>
-      <ul class="list">
-        <li>Se puede usar 1 o 2 veces por semana como “sesión fuerte”.</li>
-        <li>Ayuda a aumentar el gasto calórico sin necesidad de agregar más días de entrenamiento.</li>
-        <li>Trabaja piernas, glúteos y zona media de forma natural.</li>
-      </ul>
-      <p>
-        <a href="#calculadoras">Usar las calculadoras de caminata</a> sirve como referencia del gasto
-        energético; el rucking suma un extra que, a futuro, también se puede estimar en nuevas herramientas.
-      </p>
-    </article>
-
-  </div>
-
-  <p class="section-sub" style="margin-top: 1rem;">
-    El rucking no es obligatorio ni mágico, pero puede ser una pieza muy útil dentro de
-    un plan de movimiento realista. Combinado con caminatas suaves, algo de fuerza y un
-    déficit calórico razonable, ayuda a acelerar el proceso sin convertir la vida diaria
-    en una rutina de entrenamiento extremo.
-  </p>
+  </article>
 </section>
 
-
-    <section class="section">
-      <h2 class="section-title">Por qué existe ViveActivo</h2>
-      <p class="section-sub">
-  ViveActivo nace de una idea simple: muchas personas intentan planes exigentes que no se
-  adaptan a su vida diaria y terminan abandonando. La propuesta es construir un método
-  sostenible que combine caminatas, fuerza accesible, descanso y claridad en la alimentación,
-  con un enfoque realista para el cuerpo y también para la mente.
-</p>
-      <ul class="list">
-        <li>Porque no todos pueden entrenar 6 veces por semana.</li>
-        <li>Porque la culpa y el “todo o nada” no sirven a largo plazo.</li>
-        <li>Porque moverte un poco, de forma consistente, cambia tu cabeza y tu vida.</li>
-      </ul>
-    </section>
-
-    <!-- FOOTER -->
-    <footer class="footer">
-      <span>© <span id="year"></span> ViveActivo. Todos los derechos reservados.</span>
-      <span>Contacto: <a href="mailto:contacto@viveactivo.com">contacto@viveactivo.com</a></span>
-    </footer>
-  </div>
-
-  <script>
-    // Año dinámico en el footer
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Utilidad: redondear a una cantidad de decimales
-    function round(value, decimals) {
-      const factor = Math.pow(10, decimals);
-      return Math.round(value * factor) / factor;
-    }
-
-    // Intensidad percibida: actualizar etiqueta del slider
-    const advIntensityInput = document.getElementById("advIntensity");
-    const advIntensityLabel = document.getElementById("advIntensityLabel");
-
-    const intensityText = {
-      1: "1 · Muy suave",
-      2: "2 · Suave",
-      3: "3 · Moderada",
-      4: "4 · Intensa",
-      5: "5 · Muy exigente",
-    };
-
-    if (advIntensityInput) {
-      advIntensityInput.addEventListener("input", () => {
-        advIntensityLabel.textContent =
-          intensityText[advIntensityInput.value] || advIntensityInput.value;
-      });
-    }
 
     // CALCULADORA SIMPLE
     function calculateSimple() {
