--- a/index.html
+++ b/index.html
@@ -933,7 +933,9 @@ despejar la mente sin rutinas extremas.
             en el gasto calórico de una caminata, y cómo usarlo para bajar de peso
             sin entrenamientos extremos.
           </p>
-          <a href="calorias-quemadas-caminando.html">Leer guía completa →</a>
+          <a href="calorias-quemadas-caminando.html" class="btn btn-primary">
+  Leer guía completa →
+</a>
         </article>
       </div>
     </section>
