--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
   </button>
 
   <a class="btn btn-primary" href="calcular-calorias.html">
-    Porciones →
+    Ingesta Diaria →
   </a>
 </div>
 </header>
@@ -882,6 +882,16 @@ despejar la mente sin rutinas extremas.
         </article>
       </div>
     </section>
+
+<div class="card">
+  <h3>Calorías consumidas (ingesta diaria)</h3>
+  <p>
+    Estimá tus calorías del día sin complicarte. Entrás, cargás y listo.
+  </p>
+  <a class="btn btn-primary" href="calcular-calorias.html">
+    Calcular ingesta diaria →
+  </a>
+</div>
 
     <!-- PARA QUIÉN ES -->
     <section class="section">
